--- a/components/nav.html
+++ b/components/nav.html
@@ -1,1 +1,1 @@
-// Realizar un template sencillo con el css ya definido con anterioridad // Como hacer backend/serverles node js apps deploy.. . // Dentro de este mismo archivo generar el backend/serverless... // Como funciona y para que sirve?
+// Realizar un template sencillo con el css ya definido con anterioridad // Como hacer backend/serverles node js apps deploy... // Dentro de este mismo archivo generar el backend/serverless...
